# Num2Word

./: README.md  main.py  pyproject.toml
src/: dictionary_with_numerals.py  processing.py
tests/: test_processing.py
